<resources>
    <string name="app_name">Bezpieczne Gotowanie</string>
    <string name="action_user_info">"Informacje o użytkowniku "</string>
    <string name="ingredients_input_field_hint">Podaj swoje składniki</string>
    <string name="recipeCount_text_label">Liczba na ekranie</string>
    <string name="preparationTime_text_label">Czas przygotowania potrawy [min]:</string>
    <string name="button_search_label">Szukaj przepisów</string>
    <string-array name="recipeCount_spinner_data">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="preparationTime_spinner_data">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
    </string-array>
    <string name="title_activity_recipes_list">Lista przepisów</string>
    <string name="title_activity_recipe_detail">Przepis</string>
    <string name="preparation_details_disclaimer">Szczegóły przygotowania:</string>
    <string name="title_activity_login">BezpieczneGotowanie</string>
    <string name="password_hint">Hasło</string>
    <string name="email_hint">E-mail</string>
    <string name="singIn_button_label"> Zaloguj się </string>
    <string name="button_register_label"> Rejestracja </string>
    <string name="Continue_without_signing">Kontynuuj bez logowania</string>
    <string name="missing_email_password_message">Konieczne jest podanie adresu e-mail i hasła</string>
    <string name="user_info_activity_label">Informacje o użytkowniku</string>
    <string name="odwied_nasz_stron">Odwiedź naszą stronę.</string>
    <string name="bezpieczne_gotowanie">Bezpieczne Gotowanie</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="mi_o_ci_znowu_widzie">Miło Cię znowu widzieć!</string>
    <string name="witaj">Witaj!</string>
    <string name="lub">--------Lub--------</string>
    <string name="click">Click!</string>
    <string name="stopwatch_start">Start</string>
</resources>
